# ros2ws

./: .gitignore  CLAUDE.md  README.md
.marscode/: deviceInfo.json
doc/: README.md  modbux_client__id1.json  相机启动文件说明2026-06-08(1).docx
src/: CLAUDE.md
src/modbus_pkg/: CLAUDE.md  package.xml  setup.py
src/modbus_pkg/config/: modbus_config.toml
src/modbus_pkg/modbus_pkg/: __init__.py  address_converter.py  config_parser.py  modbus_client.py  plc_worker.py  robot_plc.py
src/modbus_pkg/scripts/: plc_worker
src/modbus_pkg/test/: 2026-06-12-11-16.md  robot.py  test_a1_coordinate.py  test_robot_plc.py
src/robot_ui/: package.xml  setup.py
src/robot_ui/qml/: ControlPanel.qml  MainWindow.qml  Robot3DView.qml  StatusBar.qml  StatusPanel.qml
src/robot_ui/robot_ui/: main.py
src/rqt_modbus_config/: README.md  package.xml  plugin.xml  setup.py
src/rqt_modbus_config/rqt_modbus_config/: __init__.py  modbus_config_plugin.py  plc_worker.py
