<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_ui</name>
  <version>0.0.1</version>
  <description>机器人打磨系统操作界面 (QML)</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>python3-pyside6</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
